json dataset, starting JAVA and HTML code

--- a/data/Project_Stock_Analysis.ipynb
+++ b/data/Project_Stock_Analysis.ipynb
@@ -9,14 +9,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Install necessary dependencies and modules.\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import yfinance as yf\n"
+    "import yfinance as yf\n",
+    "import json\n",
+    "\n"
    ]
   },
   {
@@ -95,11 +97,11 @@
      "output_type": "stream",
      "text": [
       "          Date       Open       High        Low      Close  Adj Close  \\\n",
-      "253 2021-01-04  22.197886  22.273415  21.918428  22.235649  16.811523   \n",
-      "254 2021-01-05  22.280968  22.469790  22.046827  22.099697  16.708733   \n",
-      "255 2021-01-06  22.212992  22.658609  22.182779  22.530210  17.034229   \n",
-      "256 2021-01-07  22.673716  22.726585  22.416918  22.590633  17.079912   \n",
-      "257 2021-01-08  22.009064  22.061934  21.714502  21.918428  16.962122   \n",
+      "253 2021-01-04  22.197886  22.273415  21.918428  22.235649  16.598404   \n",
+      "254 2021-01-05  22.280968  22.469790  22.046827  22.099697  16.496922   \n",
+      "255 2021-01-06  22.212992  22.658609  22.182779  22.530210  16.818291   \n",
+      "256 2021-01-07  22.673716  22.726585  22.416918  22.590633  16.863394   \n",
+      "257 2021-01-08  22.009064  22.061934  21.714502  21.918428  16.747101   \n",
       "\n",
       "       Volume Company  Year Quarter  \n",
       "253  86700816    AT&T  2021  2021Q1  \n",
@@ -164,11 +166,11 @@
      "output_type": "stream",
      "text": [
       "           Date       Open       High        Low      Close  Adj Close  \\\n",
-      "1765 2021-01-04  40.500000  40.650002  39.180000  39.570000  34.432667   \n",
-      "1766 2021-01-05  40.240002  42.869999  40.000000  41.840000  36.407963   \n",
-      "1767 2021-01-06  42.529999  43.950001  41.919998  43.509998  37.861134   \n",
-      "1768 2021-01-07  44.049999  44.990002  43.599998  44.700001  38.896652   \n",
-      "1769 2021-01-08  45.000000  45.480000  44.189999  44.700001  38.896652   \n",
+      "1765 2021-01-04  40.500000  40.650002  39.180000  39.570000  34.432663   \n",
+      "1766 2021-01-05  40.240002  42.869999  40.000000  41.840000  36.407959   \n",
+      "1767 2021-01-06  42.529999  43.950001  41.919998  43.509998  37.861141   \n",
+      "1768 2021-01-07  44.049999  44.990002  43.599998  44.700001  38.896648   \n",
+      "1769 2021-01-08  45.000000  45.480000  44.189999  44.700001  38.896648   \n",
       "\n",
       "        Volume         Company  Year Quarter  \n",
       "1765   8597600  ConocoPhillips  2021  2021Q1  \n",
@@ -245,7 +247,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\cassi\\AppData\\Local\\Temp\\ipykernel_29368\\1523246428.py:2: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "C:\\Users\\cassi\\AppData\\Local\\Temp\\ipykernel_3580\\1523246428.py:2: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
       "  quarterly_oil_percentage_change = filtered_oil_data.groupby(['Company', 'Quarter'], as_index=False).apply(\n"
      ]
     },
@@ -311,7 +313,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\cassi\\AppData\\Local\\Temp\\ipykernel_29368\\2264034523.py:2: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "C:\\Users\\cassi\\AppData\\Local\\Temp\\ipykernel_3580\\2264034523.py:2: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
       "  quarterly_tele_percentage_change = filtered_tele_data.groupby(['Company', 'Quarter'], as_index=False).apply(\n"
      ]
     },
@@ -875,9 +877,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\cassi\\AppData\\Local\\Temp\\ipykernel_29368\\3359970542.py:15: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "C:\\Users\\cassi\\AppData\\Local\\Temp\\ipykernel_3580\\3359970542.py:15: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
       "  quarterly_oil_roi = filtered_oil_data.groupby(['Company', 'Quarter']).apply(oil_roi).reset_index()\n",
-      "C:\\Users\\cassi\\AppData\\Local\\Temp\\ipykernel_29368\\3359970542.py:28: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "C:\\Users\\cassi\\AppData\\Local\\Temp\\ipykernel_3580\\3359970542.py:28: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  quarterly_oil_roi = pd.concat([initial_investment, quarterly_oil_roi], ignore_index=True).sort_values(by=['Company', 'Quarter'])\n"
      ]
     },
@@ -973,9 +975,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\cassi\\AppData\\Local\\Temp\\ipykernel_29368\\96185214.py:15: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "C:\\Users\\cassi\\AppData\\Local\\Temp\\ipykernel_3580\\96185214.py:15: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
       "  quarterly_tele_roi = filtered_tele_data.groupby(['Company', 'Quarter']).apply(tele_roi).reset_index()\n",
-      "C:\\Users\\cassi\\AppData\\Local\\Temp\\ipykernel_29368\\96185214.py:28: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "C:\\Users\\cassi\\AppData\\Local\\Temp\\ipykernel_3580\\96185214.py:28: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  quarterly_tele_roi = pd.concat([initial_investment, quarterly_tele_roi], ignore_index=True).sort_values(by=['Company', 'Quarter'])\n"
      ]
     },
@@ -1056,6 +1058,314 @@
     "plt.tight_layout()\n",
     "plt.savefig('outputs/tele_roi.png')\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Company</th>\n",
+       "      <th>Quarter</th>\n",
+       "      <th>Volatility</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AT&amp;T</td>\n",
+       "      <td>2021Q1</td>\n",
+       "      <td>0.481606</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AT&amp;T</td>\n",
+       "      <td>2021Q2</td>\n",
+       "      <td>0.890464</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AT&amp;T</td>\n",
+       "      <td>2021Q3</td>\n",
+       "      <td>0.402678</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AT&amp;T</td>\n",
+       "      <td>2021Q4</td>\n",
+       "      <td>0.938528</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>T-Mobile</td>\n",
+       "      <td>2021Q1</td>\n",
+       "      <td>4.141775</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>T-Mobile</td>\n",
+       "      <td>2021Q2</td>\n",
+       "      <td>6.063111</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>T-Mobile</td>\n",
+       "      <td>2021Q3</td>\n",
+       "      <td>7.235863</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>T-Mobile</td>\n",
+       "      <td>2021Q4</td>\n",
+       "      <td>3.704424</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Verizon</td>\n",
+       "      <td>2021Q1</td>\n",
+       "      <td>1.329955</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Verizon</td>\n",
+       "      <td>2021Q2</td>\n",
+       "      <td>0.956256</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Verizon</td>\n",
+       "      <td>2021Q3</td>\n",
+       "      <td>0.740565</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Verizon</td>\n",
+       "      <td>2021Q4</td>\n",
+       "      <td>1.107057</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Company Quarter  Volatility\n",
+       "0       AT&T  2021Q1    0.481606\n",
+       "1       AT&T  2021Q2    0.890464\n",
+       "2       AT&T  2021Q3    0.402678\n",
+       "3       AT&T  2021Q4    0.938528\n",
+       "4   T-Mobile  2021Q1    4.141775\n",
+       "5   T-Mobile  2021Q2    6.063111\n",
+       "6   T-Mobile  2021Q3    7.235863\n",
+       "7   T-Mobile  2021Q4    3.704424\n",
+       "8    Verizon  2021Q1    1.329955\n",
+       "9    Verizon  2021Q2    0.956256\n",
+       "10   Verizon  2021Q3    0.740565\n",
+       "11   Verizon  2021Q4    1.107057"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "quarterly_tele_volatility"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Company Quarter  Quarter ROI (%)  ROI on $1500 ($)  \\\n",
+      "0      AT&T  2021Q1         2.994213         44.913188   \n",
+      "1      AT&T  2021Q2        -4.828040        -72.420594   \n",
+      "2      AT&T  2021Q3        -6.507439        -97.611592   \n",
+      "3      AT&T  2021Q4        -9.358886       -140.383296   \n",
+      "4  T-Mobile  2021Q1        -6.708862       -100.632933   \n",
+      "\n",
+      "   Cumulative ROI on $1500 ($)  \n",
+      "0                    44.913188  \n",
+      "1                   -27.507406  \n",
+      "2                  -125.118998  \n",
+      "3                  -265.502294  \n",
+      "4                  -100.632933  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Concatenate the two dataframes vertically (along the rows)\n",
+    "combined_roi = pd.concat([quarterly_tele_roi, quarterly_oil_roi], axis=0)\n",
+    "\n",
+    "# If you want to reset the index of the resulting dataframe\n",
+    "combined_roi = combined_roi.reset_index(drop=True)\n",
+    "\n",
+    "# Display the first few rows of the combined dataframe\n",
+    "print(combined_roi.head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# use Groupby: filtered_tele_data + quarterly_tele_percentage_change + quarterly_tele_volume + quarterly_tele_volatility + quarterly_tele_roi\n",
+    "# use groupby: filtered_oil_data + quarterly_oil_percentage_change + quarterly_oil_volume + quarterly_oil_volatility + quarterly_oil_roi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data has been saved to 'telecom_database.json'\n",
+      "\n",
+      "First record in the JSON file:\n",
+      "{\n",
+      "    \"index\": 0,\n",
+      "    \"Company\": \"AT&T\",\n",
+      "    \"Quarter\": \"2021Q1\",\n",
+      "    \"Percentage Change\": 4.110059767278522,\n",
+      "    \"Volume\": 3620696860,\n",
+      "    \"Volatility\": 0.4816059705193589,\n",
+      "    \"Quarter ROI (%)\": 2.994212535825267,\n",
+      "    \"ROI on $1500 ($)\": 44.91318803737901,\n",
+      "    \"Cumulative ROI on $1500 ($)\": 44.91318803737901\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import json\n",
+    "\n",
+    "# Combine the DataFrames\n",
+    "combined_telecom_df = pd.concat([\n",
+    "    quarterly_tele_percentage_change,\n",
+    "    quarterly_tele_volume,\n",
+    "    quarterly_tele_volatility,\n",
+    "    quarterly_tele_roi\n",
+    "], axis=1)\n",
+    "\n",
+    "# Remove duplicate columns\n",
+    "combined_telecom_df = combined_telecom_df.loc[:, ~combined_telecom_df.columns.duplicated()]\n",
+    "\n",
+    "# Reset the index to make sure all data is included in the JSON\n",
+    "combined_telecom_df = combined_telecom_df.reset_index()\n",
+    "\n",
+    "# Convert the DataFrame to a dictionary\n",
+    "telecom_dict = combined_telecom_df.to_dict(orient='records')\n",
+    "\n",
+    "# Create a JSON structure\n",
+    "telecom_json = {\n",
+    "    \"telecom_data\": telecom_dict\n",
+    "}\n",
+    "\n",
+    "# Save the JSON to a file\n",
+    "with open('outputs/telecom_database.json', 'w') as json_file:\n",
+    "    json.dump(telecom_json, json_file, indent=4)\n",
+    "\n",
+    "print(\"Data has been saved to 'telecom_database.json'\")\n",
+    "\n",
+    "# If you want to verify the contents of the JSON file:\n",
+    "with open('outputs/telecom_database.json', 'r') as json_file:\n",
+    "    loaded_data = json.load(json_file)\n",
+    "\n",
+    "print(\"\\nFirst record in the JSON file:\")\n",
+    "print(json.dumps(loaded_data['telecom_data'][0], indent=4))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data has been saved to 'oil_database.json'\n",
+      "\n",
+      "First record in the JSON file:\n",
+      "{\n",
+      "    \"index\": 0,\n",
+      "    \"Company\": \"Chevron\",\n",
+      "    \"Quarter\": \"2021Q1\",\n",
+      "    \"Percentage Change\": 24.601586816809597,\n",
+      "    \"Volume\": 705058900,\n",
+      "    \"Volatility\": 7.943148810723182,\n",
+      "    \"Quarter ROI (%)\": 23.06517796559219,\n",
+      "    \"ROI on $1500 ($)\": 345.97766948388283,\n",
+      "    \"Cumulative ROI on $1500 ($)\": 345.97766948388283\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Combine the DataFrames\n",
+    "combined_oil_df = pd.concat([\n",
+    "    quarterly_oil_percentage_change,\n",
+    "    quarterly_oil_volume, \n",
+    "    quarterly_oil_volatility,\n",
+    "    quarterly_oil_roi\n",
+    "], axis=1)\n",
+    "\n",
+    "# Remove duplicate columns\n",
+    "combined_oil_df = combined_oil_df.loc[:, ~combined_oil_df.columns.duplicated()]\n",
+    "\n",
+    "# Reset the index to make sure all data is included in the JSON\n",
+    "combined_oil_df = combined_oil_df.reset_index()\n",
+    "\n",
+    "# Convert the DataFrame to a dictionary\n",
+    "oil_dict = combined_oil_df.to_dict(orient='records')\n",
+    "\n",
+    "# Create a JSON structure\n",
+    "oil_json = {\n",
+    "    \"oil_data\": oil_dict\n",
+    "}\n",
+    "\n",
+    "# Save the JSON to a file\n",
+    "with open('outputs/oil_database.json', 'w') as json_file:\n",
+    "    json.dump(oil_json, json_file, indent=4)\n",
+    "\n",
+    "print(\"Data has been saved to 'oil_database.json'\")\n",
+    "\n",
+    "# If you want to verify the contents of the JSON file:\n",
+    "with open('outputs/oil_database.json', 'r') as json_file:\n",
+    "    loaded_data = json.load(json_file)\n",
+    "\n",
+    "print(\"\\nFirst record in the JSON file:\")\n",
+    "print(json.dumps(loaded_data['oil_data'][0], indent=4))\n"
    ]
   }
  ],
